test/classes/figueroa/BogusDestructors1.good
BogusDestructors1.chpl:1: error: destructors must be methods
