test/classes/figueroa/BogusDestructors1.chpl
proc ~bar () {writeln("inside ~bar");}
